<resources>
    <string name="app_name">LDAR</string>
    <string name="inputting">建档</string>
    <string name="detection">检测</string>
    <string name="review">维修复测</string>
    <string name="me">我的</string>
    <string name="password">密码</string>
    <string name="login_password_digits">._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="login_list">用户列表</string>
    <string name="usernameempty">用户名不能为空</string>
    <string name="passwordempty">密码不能为空</string>
    <string name="net_error">网络连接失败，请检查您的网络连接情况</string>
    <string name="start_inputting">开始建档</string>
    <string name="nosdcard">内存卡不存在!</string>
    <string name="save">保存</string>
    <string name="save_success">保存成功</string>
    <string name="clear_tag">清除标点</string>
    <string name="logout">退出登录</string>
    <string name="not_find_image">找不到图片</string>

    <string name="location_info">位置信息</string>
    <string name="image_info">图片信息</string>
    <string name="please_select">请选择</string>
    <string name="cancel">取消</string>
    <string name="last_step">上一步</string>
    <string name="next_step">下一步</string>
    <string name="see">查看</string>
    <string name="upload">上传</string>
    <string name="no_image">暂无图片</string>


    <!--direction-->
    <string name="N">N</string>
    <string name="S">S</string>
    <string name="W">W</string>
    <string name="E">E</string>
    <string name="NNE">NNE</string>
    <string name="NE">NE</string>
    <string name="ENE">ENE</string>
    <string name="ESE">ESE</string>
    <string name="SE">SE</string>
    <string name="SSE">SSE</string>
    <string name="SSW">SSW</string>
    <string name="SW">SW</string>
    <string name="WSW">WSW</string>
    <string name="WNW">WNW</string>
    <string name="NW">NW</string>
    <string name="NNW">NNW</string>


    <string name="header_hint_refresh_normal">下拉刷新</string>
    <string name="header_hint_refresh_ready">松开后刷新</string>
    <string name="header_hint_refresh_loading">Refreshing&#8230;</string>
    <string name="header_hint_refresh_time">更新时间：</string>
    <string name="footer_hint_load_normal">上拉加载更多</string>
    <string name="footer_hint_load_ready">已加载全部</string>
    <!--下拉刷新，上拉加载 -->
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载中</string>

    <string name="fixed_model">固定模式</string>
    <string name="optional_model">自选模式</string>
    <string name="smart_model">智能模式</string>

    <string name="detecting">检测中</string>
    <string name="no_detect">待检测</string>

    <string name="v">V(阀门)</string>
    <string name="p">P(泵)</string>
    <string name="f">F(法兰)</string>
    <string name="c">C(压缩机)</string>
    <string name="a">A(搅拌器)</string>
    <string name="r">R(泄压装置)</string>
    <string name="n">N(连接件)</string>
    <string name="o">O(开口阀)</string>
    <string name="s">S(采样连接系统)</string>
    <string name="q">Q(其他类型)</string>



</resources>
