<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_dp_5"
    >
    <Button
        android:id="@+id/bt_N"
        android:layout_width="@dimen/direct_wh"
        android:layout_height="@dimen/direct_wh"
        android:text="@string/N"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/direct_tx_size"
        android:background="@drawable/bg_button_nomal"
        android:textColor="@color/font_text"/>

    <Button
        android:id="@+id/bt_NW"
        android:layout_width="@dimen/direct_wh"
        android:layout_height="@dimen/direct_wh"
        android:text="@string/NW"
        android:layout_alignParentLeft="true"
        android:textSize="@dimen/direct_tx_size"
        android:background="@drawable/bg_button_nomal"
        android:textColor="@color/font_text"/>

    <Button
        android:id="@+id/bt_NE"
        android:layout_width="@dimen/direct_wh"
        android:layout_height="@dimen/direct_wh"
        android:text="@string/NE"
        android:layout_alignParentRight="true"
        android:textSize="@dimen/direct_tx_size"
        android:background="@drawable/bg_button_nomal"
        android:textColor="@color/font_text"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/direct_wh"
        android:layout_toLeftOf="@+id/bt_N"
        android:layout_toRightOf="@+id/bt_NW">
        <Button
            android:id="@+id/bt_NNW"
            android:layout_width="@dimen/direct_wh"
            android:layout_height="@dimen/direct_wh"
            android:layout_centerHorizontal="true"
            android:text="@string/NNW"
            android:textSize="@dimen/direct_tx_size"
            android:background="@drawable/bg_button_nomal"
            android:textColor="@color/font_text"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/direct_wh"
        android:layout_toLeftOf="@+id/bt_NE"
        android:layout_toRightOf="@+id/bt_N">
        <Button
            android:id="@+id/bt_NNE"
            android:layout_width="@dimen/direct_wh"
            android:layout_height="@dimen/direct_wh"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/direct_tx_size"
            android:text="@string/NNE"
            android:background="@drawable/bg_button_nomal"
            android:textColor="@color/font_text"/>
    </RelativeLayout>

    <Button
        android:id="@+id/bt_W"
        android:layout_width="@dimen/direct_wh"
        android:layout_height="@dimen/direct_wh"
        android:text="@string/W"
        android:textSize="@dimen/direct_tx_size"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/bg_button_nomal"
        android:textColor="@color/font_text"/>
    <Button
        android:id="@+id/bt_S"
        android:layout_width="@dimen/direct_wh"
        android:layout_height="@dimen/direct_wh"
        android:text="@string/S"
        android:textSize="@dimen/direct_tx_size"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_button_nomal"
        android:textColor="@color/font_text"/>
    <Button
        android:id="@+id/bt_E"
        android:layout_width="@dimen/direct_wh"
        android:layout_height="@dimen/direct_wh"
        android:text="@string/E"
        android:textSize="@dimen/direct_tx_size"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/bg_button_nomal"
        android:textColor="@color/font_text"/>

    <Button
        android:id="@+id/bt_SW"
        android:layout_width="@dimen/direct_wh"
        android:layout_height="@dimen/direct_wh"
        android:text="@string/SW"
        android:textSize="@dimen/direct_tx_size"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_button_nomal"
        android:textColor="@color/font_text"/>
    <Button
        android:id="@+id/bt_SE"
        android:layout_width="@dimen/direct_wh"
        android:layout_height="@dimen/direct_wh"
        android:text="@string/SE"
        android:textSize="@dimen/direct_tx_size"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_button_nomal"
        android:textColor="@color/font_text"/>
    <RelativeLayout
        android:layout_width="@dimen/direct_wh"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_above="@id/bt_W"
        android:layout_below="@id/bt_NW">
        <Button
            android:id="@+id/bt_WNW"
            android:layout_width="@dimen/direct_wh"
            android:layout_height="@dimen/direct_wh"
            android:text="@string/WNW"
            android:textSize="@dimen/direct_tx_size"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_button_nomal"
            android:textColor="@color/font_text"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/direct_wh"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_above="@id/bt_SW"
        android:layout_below="@id/bt_W">
        <Button
            android:id="@+id/bt_WSW"
            android:layout_width="@dimen/direct_wh"
            android:layout_height="@dimen/direct_wh"
            android:text="@string/WSW"
            android:textSize="@dimen/direct_tx_size"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_button_nomal"
            android:textColor="@color/font_text"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/direct_wh"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_above="@id/bt_E"
        android:layout_below="@id/bt_NE">
        <Button
            android:id="@+id/bt_ENE"
            android:layout_width="@dimen/direct_wh"
            android:layout_height="@dimen/direct_wh"
            android:text="@string/ENE"
            android:textSize="@dimen/direct_tx_size"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_button_nomal"
            android:textColor="@color/font_text"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/direct_wh"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_above="@id/bt_SE"
        android:layout_below="@id/bt_E">
        <Button
            android:id="@+id/bt_ESE"
            android:layout_width="@dimen/direct_wh"
            android:layout_height="@dimen/direct_wh"
            android:text="@string/ESE"
            android:textSize="@dimen/direct_tx_size"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_button_nomal"
            android:textColor="@color/font_text"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/direct_wh"
        android:layout_toLeftOf="@id/bt_S"
        android:layout_toRightOf="@id/bt_SW"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/bt_SSW"
            android:layout_width="@dimen/direct_wh"
            android:layout_height="@dimen/direct_wh"
            android:text="@string/SSW"
            android:textSize="@dimen/direct_tx_size"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_button_nomal"
            android:textColor="@color/font_text"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/direct_wh"
        android:layout_toLeftOf="@id/bt_SE"
        android:layout_toRightOf="@id/bt_S"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/bt_SSE"
            android:layout_width="@dimen/direct_wh"
            android:layout_height="@dimen/direct_wh"
            android:text="@string/SSE"
            android:textSize="@dimen/direct_tx_size"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_button_nomal"
            android:textColor="@color/font_text"
            />
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/sharp_circle"/>


</RelativeLayout>
