<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/main_background"
    >
    <ScrollView
        android:layout_width="@dimen/dimen_dp_80"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/bt_last_step"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_dp_40"
                android:text="@string/last_step"
                android:layout_margin="@dimen/dimen_dp_5"
                android:textColor="@color/font_text"
                android:background="@drawable/bg_button_nomal"/>
            <Button
                android:id="@+id/bt_save"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_dp_40"
                android:text="@string/save"
                android:textColor="@color/font_text"
                android:background="@drawable/bg_button_nomal"
                android:layout_margin="@dimen/dimen_dp_5"/>
            <Button
                android:id="@+id/bt_clear"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_dp_40"
                android:text="@string/clear_tag"
                android:textColor="@color/font_text"
                android:background="@drawable/bg_button_nomal"
                android:layout_margin="@dimen/dimen_dp_5"/>
            <RadioGroup
                android:id="@+id/rg_tag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/rb_F"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_dp_30"
                    android:text="F(法兰)"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:textColor="@color/font_text"
                    android:textSize="@dimen/dimen_dp_12"
                    android:background="@drawable/selector_radio"
                    android:layout_margin="@dimen/dimen_dp_5"/>
                <RadioButton
                    android:id="@+id/rb_V"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_dp_30"
                    android:text="V(阀门)"
                    android:button="@null"
                    android:gravity="center"
                    android:textColor="@color/font_text"
                    android:textSize="@dimen/dimen_dp_12"
                    android:background="@drawable/selector_radio"
                    android:layout_margin="@dimen/dimen_dp_5"/>
                <RadioButton
                    android:id="@+id/rb_C"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_dp_30"
                    android:text="C(连接件)"
                    android:button="@null"
                    android:gravity="center"
                    android:textSize="@dimen/dimen_dp_12"
                    android:textColor="@color/font_text"
                    android:background="@drawable/selector_radio"
                    android:layout_margin="@dimen/dimen_dp_5"/>
                <RadioButton
                    android:id="@+id/rb_O"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_dp_30"
                    android:text="O(开口)"
                    android:button="@null"
                    android:gravity="center"
                    android:textColor="@color/font_text"
                    android:background="@drawable/selector_radio"
                    android:textSize="@dimen/dimen_dp_12"
                    android:layout_margin="@dimen/dimen_dp_5"/>

                <!--默认隐藏下面6个选项-->

                <RadioButton
                    android:id="@+id/rb_Y"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_dp_30"
                    android:text="Y(压缩机)"
                    android:button="@null"
                    android:gravity="center"
                    android:textColor="@color/font_text"
                    android:textSize="@dimen/dimen_dp_12"
                    android:background="@drawable/selector_radio"
                    android:layout_margin="@dimen/dimen_dp_5"
                    android:visibility="gone"/>
                <RadioButton
                    android:id="@+id/rb_A"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_dp_30"
                    android:text="A(搅拌器)"
                    android:button="@null"
                    android:gravity="center"
                    android:textSize="@dimen/dimen_dp_12"
                    android:textColor="@color/font_text"
                    android:background="@drawable/selector_radio"
                    android:layout_margin="@dimen/dimen_dp_5"
                    android:visibility="gone"/>
                <RadioButton
                    android:id="@+id/rb_R"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_dp_30"
                    android:text="R(泄压装置)"
                    android:button="@null"
                    android:gravity="center"
                    android:textColor="@color/font_text"
                    android:background="@drawable/selector_radio"
                    android:textSize="@dimen/dimen_dp_10"
                    android:layout_margin="@dimen/dimen_dp_5"
                    android:visibility="gone"/>
                <RadioButton
                    android:id="@+id/rb_P"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_dp_30"
                    android:text="P(泵)"
                    android:button="@null"
                    android:gravity="center"
                    android:textColor="@color/font_text"
                    android:textSize="@dimen/dimen_dp_12"
                    android:background="@drawable/selector_radio"
                    android:layout_margin="@dimen/dimen_dp_5"
                    android:visibility="gone"/>
                <RadioButton
                    android:id="@+id/rb_S"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_dp_30"
                    android:text="S(采样连接系统)"
                    android:button="@null"
                    android:gravity="center"
                    android:textSize="@dimen/dimen_dp_8"
                    android:textColor="@color/font_text"
                    android:background="@drawable/selector_radio"
                    android:layout_margin="@dimen/dimen_dp_5"
                    android:visibility="gone"/>
                <RadioButton
                    android:id="@+id/rb_Q"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_dp_30"
                    android:text="Q(其他)"
                    android:button="@null"
                    android:gravity="center"
                    android:textColor="@color/font_text"
                    android:background="@drawable/selector_radio"
                    android:textSize="@dimen/dimen_dp_12"
                    android:layout_margin="@dimen/dimen_dp_5"
                    android:visibility="gone"/>
            </RadioGroup>
            <LinearLayout
                android:id="@+id/ll_more"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_dp_20"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="@dimen/dimen_dp_5">
                <ImageView
                    android:id="@+id/iv_arrow_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow_more_down"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


    <com.lm.ldar.view.PictureTagLayout
        android:id="@+id/tagview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </com.lm.ldar.view.PictureTagLayout>
</LinearLayout>
